css/site.css
/* ... */
ul ul,
ol ol,
ul ol,
ol ul {
  margin: 0 0 0 1.3rem; 
}

ul.horizontal li {
  display: inline-block;
  margin: 0; 
}






/*
    MEDIA
    canvas, object, embed, img, audio, video, track, map, area, iframe
*/
img {
    height: auto;
    max-width: 96vw;
    width: auto; 
}

audio {
    background-color: var(--color-primary);
    border-radius: 10px;
    width: 100%;
}






/*
    PHRASING
    a, strong, em, b, i, u, s, sup, sub, small, abbr, dfn, mark, del, ins, q, cite, data, 
    progress, time, meter, code, var, samp, kbd, keygen, bdi, bdo, ruby, rt, rp, span
*/
a,
strong,
em,
b,
i,
small,
code {
  line-height: 0; 
}

/* todo: https://codepen.io/ghepting/pen/tLnHK/ */
a {
  color: var(--color-black);
  white-space: nowrap;
}

h2 a {
    white-space: initial;
}

kbd kbd {
    background-color: #f7f7f7;
    border: 1px solid #ccc;
    border-radius: 3px;
    box-shadow: 0 1px 0 rgba(0, 0, 0, 0.2), 0 0 0 2px var(--color-white) inset;
    color: #333;
    display: inline-block;
    font-size: 18px;
    font-family: sans-serif;
    line-height: 1.4;
    margin: 0 0.1em;
    padding: 0.1em 0.6em;
    text-shadow: 0 1px 0 var(--color-white);
    white-space: nowrap; 
}






/*
    OTHER
    hr, ::selection
*/
::-moz-selection {
    background: var(--color-primary);
    color: var(--color-white);
    text-shadow: none; 
}

::selection {
    background-color: var(--color-primary);
    color: var(--color-white);
    text-shadow: none; 
}






/*
    HELPER CLASSES
*/
.hidden {
  display: none !important
}

.invisible {
  visibility: hidden
}

.visuallyhidden {
  border: 0;
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px
}

.visuallyhidden.focusable:active, 
.visuallyhidden.focusable:focus {
  clip: auto;
  height: auto;
  margin: 0;
  overflow: visible;
  position: static;
  width: auto
}






/*
    ICONS
*/
.icon-demo-container {
    width: 800px; 
    margin: auto;
    font-size: 24px;
}

.icon-demo-container ul {
    list-style: none;
}

.icon-demo-container li {
    margin-bottom: 0.5em;
    display: flex;
    align-items: center;
}

.icon-demo {
    padding: 1.3em;
    margin-top: 2.6em;
}

.icon-demo img {
    height: 32px;
    width: 32px;
}

.icon-demo-md,
.icon-demo-orion-solid,
.icon-demo-orion-line,
.icon-demo-icons8-windows,
.icon-demo-icons8-cute-outline {
    background-color: var(--color-primary);
    color: var(--color-white);
}

.icon-demo-orion-line {
    stroke: var(--color-white);
    stroke-width: 3;
}

.icon-container {
    width: 1.5em;
}

.icon {
	height: 1em;
    width: 1em;
    position: relative;
    top: 0.125em;
    flex-shrink: 0;
    --layer1: var(--color-black);
    --layer2: var(--color-black);
}

.icon-mail {
    top: 0.2em;       
}

.icon-rss {
    top: 0.1em;      
    width: 0.8em;
}

.icon-headphones-user,
.icon-property {
    top: 0.05em;
}






/*
    SITE LAYOUT
*/
.site-header,
.site-header a,
.site-nav,
.site-nav a,
.site-footer,
.site-footer a {
    text-decoration: none;
}

.site-nav.active {
    padding: 1em 0 0 0;
}

.site-nav a:hover {
    background-color: var(--color-secondary);
}

.site-header .masthead {
    font-size: 8vw;
    margin-top: 0;
    display: none;
}

.site-header .menu-link {
    margin-top: 2.6rem;
    text-transform: uppercase;
    border: 2px solid var(--color-primary);
    border-radius: 10px;
    padding: 0.65em;
}

.site-header .menu-link.active {
    background-color: var(--color-primary);
    color: var(--color-white);
}

.site-header .menu-link.active .icon {
    --layer1: var(--color-white);
    --layer2: var(--color-white);
}

.site-header {
    grid-area: masthead;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    align-items: center;
    padding: 1rem;
}

.site-logo {
    max-width: 300px;
}

.site-header.layout-site {
    flex-direction: row;
}

.site-header.layout-home .menu-link {
    text-align: center;       
    width: 100%;
}

.site-header.layout-site .menu-link {
    margin: 0 1rem;
}

.site-nav {
    grid-area: nav;
}

.site-main {
    grid-area: main;
}

.site-footer {
    grid-area: footer;
    background-color: var(--color-secondary);
    padding: 1em;
}

.site-footer a:hover {
    background-color: var(--color-primary);
}

.site-footer ol {
    list-style: none;
    margin: 0;
}


.site-nav-links,
.site-nav-footer {
    font-weight: bold;
}






/*
    SITE NAV
*/
.site-nav {
    background-color: var(--color-primary);
    font-size: 1.5625rem;
    -webkit-transition: all 0.3s ease-in-out;  
       -moz-transition: all 0.3s ease-in-out;
        -ms-transition: all 0.3s ease-in-out;
         -o-transition: all 0.3s ease-in-out;
            transition: all 0.3s ease-in-out;
}

.js .site-nav {
    overflow: hidden;
    max-height: 0;
}

.site-nav.active {
    max-height: 26em;
}

.site-nav .site-nav-links {
    margin: 0;
    padding: 0;
}

.site-nav li > a,
.site-nav .site-nav-footer a {
    display: block;
    padding: 1em 1em 1.3em 1em;
}

.site-nav .site-nav-episodes {
    background-color: var(--color-black);
    color: var(--color-primary);
    padding: 1.3em;
}

.site-nav .site-nav-episodes .icon {
    --layer1: var(--color-primary);
    --layer2: var(--color-primary);
}

.site-nav .site-nav-footer {
    display: flex;
    justify-content: space-evenly;
}
  





/*
    HOME
*/
.home-episodes {
    margin-top: 2.6rem;
}

.home-episodes h2 {
    font-size: 1rem;
    line-height: 0.65rem;
    text-transform: uppercase;
}






/*
    EPISODE BLOCK, EPISODE CARD
*/
.episode-block {
    display: grid;
    grid-template-columns: max-content auto;
    grid-template-areas: 
        "empty    heading" 
        "control  episode";
    column-gap: 5px;
}
  
.episode-block .heading {
    grid-area: heading;
    font-size: 14px;
    text-transform: uppercase;
}

.episode-block .media-buttons {
    cursor: pointer;
    grid-area: control;
}
/* ... */

